--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,6 +2,8 @@ header {
 	padding-top: 2%;
 	padding-bottom: 2%;
 	text-align: center;
+	font-family: "american typewriter";
+	font-weight: bold;
 }
 
 .front-photos {
@@ -10,7 +12,7 @@ header {
 	margin-left: 1%;
 	margin-right: 1%;
 	margin-bottom: 2%;
-	border: 4px solid white;
+	border: 6px solid white;
 }
 
 .front-photos1 {
@@ -19,7 +21,7 @@ header {
 	margin-left: 1%;
 	margin-right: 1%;
 	margin-bottom: 2%;
-	border: 4px solid white;
+	border: 6px solid white;
 }
 
 footer a {
