--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -7,8 +7,8 @@ header {
 }
 
 .front-photos {
-	width: 200px;
-	height: 300px;
+	width: 20%;
+	height: 100%;
 	margin-left: 1%;
 	margin-right: 1%;
 	margin-bottom: 2%;
@@ -16,8 +16,8 @@ header {
 }
 
 .front-photos1 {
-	width: 250px;
-	height: 400px;
+	width: 23%;
+	height: 100%;
 	margin-left: 1%;
 	margin-right: 1%;
 	margin-bottom: 2%;
@@ -41,5 +41,5 @@ padding-top: 2%;
 .container-fluid {
 background-color: #7da6ad;
 background-image: url(http://www.transparenttextures.com/patterns/brick-wall.png);
-
 }
+
