--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="footer" style="text-align: center;">
-	<a href="#" class="icon-facebook-alt" style="color: black;"></a>
-	<a href="#" class="icon-twitter" style="color: black;"></a>
-	<a href="#" class="icon-instagrem" style="color: black;"></a>
-	<a href="#" class="icon-call-phone" style="color: black;"></a>
-	<a href="#" class="icon-email-envelope" style="color: black;"></a>
+	<a href="https://www.facebook.com/jenna.frechette" class="icon-facebook-alt" style="color: black;"></a>
+	<a href="https://twitter.com/jjfrech" class="icon-twitter" style="color: black;"></a>
+	<a href="https://instagram.com/jjfrech/" class="icon-instagrem" style="color: black;"></a>
+	<a href="tel:14107468483" class="icon-call-phone" style="color: black;"></a>
+	<a href="mailto:Jenna.frechette@gmail.com" class="icon-email-envelope" style="color: black;"></a>
 </div>
