added about me page

--- a/app/assets/stylesheets/teachers.scss
+++ b/app/assets/stylesheets/teachers.scss
@@ -4,7 +4,7 @@ footer {
 	padding-bottom: 2%;
 	text-align: center;
 	font-family: "american typewriter";
-	font-weight: bold;
+	font-weight: strong;
 	background-color: white;
 }
 
