--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
 <div class="container-fluid" style="text-align: center; padding-top: 2%">
 <div class="row">
 
-		<a href="#" class="wrapper"><%= image_tag('jenna2.png', :class => 'front-photos') %></a>
+		<a href="/about" class="wrapper"><%= image_tag('jenna2.png', :class => 'front-photos') %></a>
 		<a><%= image_tag('jenna1.jpg', :class => 'front-photos1') %></a>
 		<a href="/teachers"><%= image_tag('jenna4.png', :class => 'front-photos') %></a>
 		<a><%= image_tag('jenna3.png', :class => 'front-photos1') %></a>
