--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -3,7 +3,7 @@ header {
 	padding-bottom: 2%;
 	text-align: center;
 	font-family: "american typewriter";
-	font-weight: bold;
+	font-weight: strong;
 }
 
 .front-photos {
