--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,5 +1,12 @@
 <header>
-<h1>About Me</h1>
+<div class="dropdown">
+    <h1>About Me</h1>
+    <ul class="dropdown-menu">
+        <li><a href="/">Home</a></li>
+        <li><a href="/teachers">Teaching</a></li>
+        <li><a href="#">Gigs</a></li>
+    </ul>
+</div>
 </header>
 <body>
 <div class="container">	
