--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,4 +1,11 @@
-<header><h1>Teaching</h1></header>
+<header><div class="dropdown">
+    <h1>Teaching</h1>
+    <ul class="dropdown-menu">
+        <li><a href="/">Home</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="#">Gigs</a></li>
+    </ul>
+</div></header>
 <div class="teaching-block"><a style="vertical-align: middle; display: inline-block;"><span style="font-size: 100%; margin-right: 2%;">A few words about teaching... bla bla bla bla. </span><br><span style="font-size: 90%;"><em>bla bla bla bla bla </em></span></a><%= image_tag('teach.png', :class => 'teach') %>
 </div>
 <div class="mlone"><%= video_tag('mlonevideo.mp4', :class => 'video', :controls => true) %><a href="http://www.themovementlifestyle.com/" style="vertical-align: middle; display: inline-block;"><span style="font-size: 100%; margin-left: 2%;">mL ONE - Movement Lifestyle Dance Studio </span><br><span style="font-size: 90%;"><em>Hip Hop</em></span></a>
