attempt to fix footer

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,20 +1,21 @@
+<body>
 <header>
 <div class="dropdown">
     <h1>About Me</h1>
     <ul class="dropdown-menu">
         <li><a href="/">Home</a></li>
         <li><a href="/teachers">Teaching</a></li>
-        <li><a href="#">Gigs</a></li>
+        <li><a href="/gigs">Performances</a></li>
     </ul>
 </div>
 </header>
-<body>
+
 <div class="container">	
 <%= image_tag('dance.png', :class => 'dance') %>
 <p style="margin-bottom: 5%;">Lorem ipsum dolor sit amet, prima cetero officiis vix id, his tota copiosae ponderum ne. Nullam suavitate sea ad, mei eu docendi quaestio. Labore debitis vis et. In melius consequuntur vim, an mel dicit debitis copiosae. Nec no sonet recteque. Vim id timeam saperet disputationi, qui no commodo labores admodum, in augue prompta noluisse per. Eu per nibh solum, soleat prodesset eum eu.
 Quo solum minim contentiones ut, mea cibo electram id, wisi conceptam mea no. Mei eros phaedrum recteque et, ut atqui liber aliquando eos. Mea illum definiebas ex, eos eu dolorem antiopam, nam ad elit nulla interpretaris. Nec et dicunt reprehendunt, paulo contentiones his ei, ut virtute reprimique usu. Usu ne sint omnium. Agam falli molestie an eos, ad sit aliquam sententiae eloquentiam.</p>
 </div>
-</body>
+
 <footer style="text-align: center;">
 	<a href="https://www.facebook.com/jenna.frechette" class="icon-facebook-alt" style="color: black;"></a>
 	<a href="https://twitter.com/jjfrech" class="icon-twitter" style="color: black;"></a>
@@ -22,3 +23,4 @@ Quo solum minim contentiones ut, mea cibo electram id, wisi conceptam mea no. Me
 	<a href="tel:14107468483" class="icon-call-phone" style="color: black;"></a>
 	<a href="mailto:Jenna.frechette@gmail.com" class="icon-email-envelope" style="color: black;"></a>
 </footer>
+</body>
