--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,17 +1,16 @@
+<body>
 <header>
 	<h1>Jenna Frechette</h1>
 </header>
-<body style="height: 100%">
 <div class="container-fluid" style="text-align: center; padding-top: 2%">
 <div class="row">
 
 		<a href="/about" class="wrapper"><%= image_tag('jenna2.png', :class => 'front-photos') %></a>
 		<a><%= image_tag('jenna1.jpg', :class => 'front-photos1') %></a>
 		<a href="/teachers"><%= image_tag('jenna4.png', :class => 'front-photos') %></a>
-		<a><%= image_tag('jenna3.png', :class => 'front-photos1') %></a>
+		<a href="/gigs"><%= image_tag('jenna3.png', :class => 'front-photos1') %></a>
 	</div>
 </div>
-</body>
 <footer style="text-align: center;">
 	<a href="https://www.facebook.com/jenna.frechette" class="icon-facebook-alt" style="color: black;"></a>
 	<a href="https://twitter.com/jjfrech" class="icon-twitter" style="color: black;"></a>
@@ -19,3 +18,4 @@
 	<a href="tel:14107468483" class="icon-call-phone" style="color: black;"></a>
 	<a href="mailto:Jenna.frechette@gmail.com" class="icon-email-envelope" style="color: black;"></a>
 </footer>	
+</body>
