--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,9 +1,10 @@
+<body>
 <header><div class="dropdown">
-    <h1>Teaching</h1>
+    <p style="font-size: 50px;">Teaching</p>
     <ul class="dropdown-menu">
         <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="#">Gigs</a></li>
+        <li><a href="/about">About Me</a></li>
+        <li><a href="/gigs">Performances</a></li>
     </ul>
 </div></header>
 <div class="teaching-block"><a style="vertical-align: middle; display: inline-block;"><span style="font-size: 100%; margin-right: 2%;">A few words about teaching... bla bla bla bla. </span><br><span style="font-size: 90%;"><em>bla bla bla bla bla </em></span></a><%= image_tag('teach.png', :class => 'teach') %>
@@ -19,3 +20,4 @@
 	<a href="tel:14107468483" class="icon-call-phone" style="color: black;"></a>
 	<a href="mailto:Jenna.frechette@gmail.com" class="icon-email-envelope" style="color: black;"></a>
 </footer>
+<body>
