second attempt at fixing footer

--- a/app/assets/stylesheets/teachers.scss
+++ b/app/assets/stylesheets/teachers.scss
@@ -7,7 +7,7 @@ header {
 	background-color: white;
 }
 
-body {
+.middle {
 	font-family: 'american typewriter';
 	text-align: center;
 	background-color: #7da6ad;
