--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,9 @@
 <body>
+	<div id="wrapper">
 <header>
 	<h1>Jenna Frechette</h1>
 </header>
-<div class="container-fluid" style="text-align: center; padding-top: 2%">
+<div class="container-fluid" style="text-align: center; padding-top: 2%;">
 <div class="row">
 
 		<a href="/about" class="wrapper"><%= image_tag('jenna2.png', :class => 'front-photos') %></a>
@@ -18,4 +19,5 @@
 	<a href="tel:14107468483" class="icon-call-phone" style="color: black;"></a>
 	<a href="mailto:Jenna.frechette@gmail.com" class="icon-email-envelope" style="color: black;"></a>
 </footer>	
+</div>
 </body>
