--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -7,11 +7,13 @@
         <li><a href="/gigs">Performances</a></li>
     </ul>
 </div></header>
+<div class="middle">
 <div class="teaching-block"><a style="vertical-align: middle; display: inline-block;"><span style="font-size: 100%; margin-right: 2%;">A few words about teaching... bla bla bla bla. </span><br><span style="font-size: 90%;"><em>bla bla bla bla bla </em></span></a><%= image_tag('teach.png', :class => 'teach') %>
 </div>
 <div class="mlone"><%= video_tag('mlonevideo.mp4', :class => 'video', :controls => true) %><a href="http://www.themovementlifestyle.com/" style="vertical-align: middle; display: inline-block;"><span style="font-size: 100%; margin-left: 2%;">mL ONE - Movement Lifestyle Dance Studio </span><br><span style="font-size: 90%;"><em>Hip Hop</em></span></a>
 </div>
 <div class="rage"><a href="http://ragecomplex.com/" style="vertical-align: middle; display: inline-block;"><span style="font-size: 100%; margin-right: 2%;">The Rage Entertainment Complex</span><br><span style="font-size: 90%;"><em>Hip Hop | Jazz | Ballet</em></span></a><%= video_tag('ragevideo.mp4', :class => 'video', :controls => true) %>
+</div>
 </div>
 <footer style="text-align: center;">
 	<a href="https://www.facebook.com/jenna.frechette" class="icon-facebook-alt" style="color: black;"></a>
