--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,6 +1,6 @@
 header {
-	padding-top: 2%;
-	padding-bottom: 2%;
+	padding-top: 1%;
+	padding-bottom: 1%;
 	text-align: center;
 	font-family: "american typewriter";
 	font-weight: strong;
@@ -35,11 +35,13 @@ footer a:hover {
 }
 
 footer {
-padding-top: 2%;
+	padding-top: 2%;
+  width: 100%;
 }
 
 .container-fluid {
 background-color: #7da6ad;
 background-image: url(http://www.transparenttextures.com/patterns/brick-wall.png);
 }
+
 
