added paula video

--- a/app/assets/stylesheets/gigs.scss
+++ b/app/assets/stylesheets/gigs.scss
@@ -46,6 +46,7 @@ body {
 }
 
 footer {
+	margin-top: 5%;
 	padding-top: 2%;
 	padding-bottom: 2%;
 	text-align: center;
@@ -54,3 +55,9 @@ footer {
 	background-color: white;
 	color: black;
 	}
+
+.paula {
+	margin-bottom: 1%;
+	margin-top: 5%;
+	width: 50%;
+}
