--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,7 +1,7 @@
 <body>
 <header>
 <div class="dropdown">
-    <h1>About Me</h1>
+    <p style="font-size: 50px;">About Me</p>
     <ul class="dropdown-menu">
         <li><a href="/">Home</a></li>
         <li><a href="/teachers">Teaching</a></li>
