--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <body>
 	<div id="wrapper">
 <header>
-	<h1>Jenna Frechette</h1>
+	<p style="font-size: 50px;">Jenna Frechette</p>
 </header>
 <div class="container-fluid" style="text-align: center; padding-top: 2%;">
 <div class="row">
