--- a/app/views/gigs/index.html.erb
+++ b/app/views/gigs/index.html.erb
@@ -1,9 +1,17 @@
 <header><div class="dropdown">
-    <h1>Performances</h1>
+    <p style="font-size: 50px;">Performances</p>
     <ul class="dropdown-menu">
         <li><a href="/">Home</a></li>
         <li><a href="/about">About Me</a></li>
         <li><a href="/teachers">Teaching</a></li>
     </ul>
 </div></header>
-<body>lksjdflkjsdlkfjlksdj</body>
+<%= video_tag('paula.mp4', :class => 'paula', :controls => true) %>
+<p>Paula Abdul - Breast Cancer Awareness: "Check Yourself"</p>
+<footer style="text-align: center;">
+	<a href="https://www.facebook.com/jenna.frechette" class="icon-facebook-alt" style="color: black;"></a>
+	<a href="https://twitter.com/jjfrech" class="icon-twitter" style="color: black;"></a>
+	<a href="https://instagram.com/jjfrech/" class="icon-instagrem" style="color: black;"></a>
+	<a href="tel:14107468483" class="icon-call-phone" style="color: black;"></a>
+	<a href="mailto:Jenna.frechette@gmail.com" class="icon-email-envelope" style="color: black;"></a>
+</footer>
